--- a/css/style.css
+++ b/css/style.css
@@ -64,30 +64,61 @@ a{
 
 /*Req 6a*/
 td{
-  
+  text-align: center;
+  border-top: 2px solid #000;
+  padding: 10px 10px 10px 10px;
 }
 
 /*Req 6b*/
 .colhead{
   color: #FFFFFF;
-
+  min-width: 125px;
+  padding: 10px 10px 10px 10px;
+  text-align: center;
+  vertical-align: middle;
+  text-transform: uppercase;
+  background-color: #7e0820;
 }
 /*Req 6c*/
 .rowhead{
-
+  border: 2px solid #000;
+  border-left: 0px;
+  border-bottom: 0px;
 }
 
 /*Req 6d*/
+tr:nth-child(odd){
+  background-color: transparent;
+}
 /*Req 6e*/
+tr:nth-child(even){
+  background-color: #D1D1D1;
+}
 /*Req 6f*/
-
+tr:hover{
+  background-color: rgba(126, 8, 32,0.25);
+}
 
 /*Req 7*/
 table{
     border: 2px solid #000000;
+    border-radius:10px;
 }
 
-thead tr:first-child th:first-child{}
+@media only screen and (min-width: 768px) {
+  table {
+    margin-left:auto;
+    margin-right:auto;
+  }
+}
+
+thead tr:first-child th:first-child{
+  border-top-left-radius: 10px;
+}
+
+thead tr:first-child th:last-child{
+  border-top-right-radius: 10px;
+}
 
 /*Add selectors and rules here*/
 
@@ -95,8 +126,11 @@ thead tr:first-child th:first-child{}
 /*Req 8*/
 footer{
   width:100%;
+  min-height: 75px;
   background:#000000;
   text-align:center;
   color: #FFFFFF;
+  position: fixed;
+  bottom: 0;
 }
 
