--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,13 @@ thead tr:first-child th:last-child{
 }
 
 /*Add selectors and rules here*/
+tbody tr:last-child th.rowhead {
+  border-bottom-left-radius: 10px;
+}
 
+tbody tr:last-child td:last-child {
+  border-bottom-left-radius: 10px;
+}
 
 /*Req 8*/
 footer{
@@ -132,5 +138,6 @@ footer{
   color: #FFFFFF;
   position: fixed;
   bottom: 0;
+  left: 0;
 }
 
