Fixed background repeat and border-right

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body{
   font-family: 'Andika', sans-serif;
   background-image: url("../images/pigeon-background.JPEG");
   background-color: #DDDDDD;
+  background-repeat:no-repeat;
   /*Req 1*/
 }
 
@@ -126,7 +127,7 @@ tbody tr:last-child th.rowhead {
 }
 
 tbody tr:last-child td:last-child {
-  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 /*Req 8*/
